fix: text now appears on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,10 @@ a {
 .gradient-text {
     background: var(--primary-gradient);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
 
 .hero-description {
